@@ -13,6 +13,9 @@ summary: Corrija os bloqueadores de ONTAP e reconheça os avisos que estão impe
 [role="lead"]
 Depois de identificar a versão de destino do ONTAP para o seu sistema de armazenamento ONTAP, você deve corrigir e reconhecer todos os bloqueadores e revisar os avisos antes de atualizar o sistema de armazenamento do ONTAP.
 
+.Função BlueXP necessária:
+Administrador da organização, administrador de pasta ou projeto, administrador de armazenamento ou especialista em integridade do sistema. link:https://docs.netapp.com/us-en/bluexp-setup-admin/reference-iam-predefined-roles.html["Saiba mais sobre as funções de acesso do BlueXP."^]
+
 Corrigir e reconhecer todos os bloqueadores é obrigatório e garante um processo de atualização de software contínuo.
 
 .Passos
@@ -21,19 +24,19 @@ Corrigir e reconhecer todos os bloqueadores é obrigatório e garante um process
 É apresentada a lista de clusters que necessitam de uma atualização de software.
 
 . Identifique a versão de destino do ONTAP para o seu sistema de storage. Para obter informações sobre como identificar a versão de destino do ONTAP, link:../ONTAP/choose-ontap-910-later.html["Compare versões do ONTAP para entender os benefícios e riscos usando as atualizações de software do BlueXP "]consulte .
-. Depois de decidir sobre a versão de destino do ONTAP, clique em *Prepare for update* para iniciar o processo de atualização.
+. Depois de decidir a versão de destino do ONTAP , selecione *Preparar para atualização* para iniciar o processo de atualização.
 +
 É apresentada a lista de bloqueadores e avisos.
 
 . Selecione o bloqueador para ver as instruções para corrigir o bloqueador.
 . Execute manualmente as etapas fornecidas para corrigir o bloqueador.
-. Selecione os bloqueadores que foram corrigidos e clique em *Accept Selected* para confirmar que os bloqueadores foram corrigidos.
+. Selecione os bloqueadores que foram corrigidos e selecione *Reconhecer selecionados* para confirmar que os bloqueadores foram corrigidos.
 
 
 
 NOTE: Você deve corrigir e reconhecer todos os bloqueadores para prosseguir com a atualização.
 
-. Clique no separador *Avisos* para rever os avisos antes de prosseguir com a atualização do software.
-. Clique no separador *reconhecer* para ver os bloqueadores que foram corrigidos.
-. Clique em *Continue to update* para prosseguir com o processo de atualização.
+. Selecione a aba *Avisos* para revisar os avisos antes de prosseguir com a atualização do software.
+. Selecione a aba *Reconhecer* para visualizar os bloqueadores que foram corrigidos.
+. Selecione *Continuar atualizando* para prosseguir com o processo de atualização.
 
