@@ -23,15 +23,10 @@
   <block id="7d73325ccb71b4870e81c3c8734ba56e" category="paragraph">Depois de identificar a versão de destino do ONTAP para o seu sistema de armazenamento ONTAP, você deve corrigir e reconhecer todos os bloqueadores e revisar os avisos antes de atualizar o sistema de armazenamento do ONTAP.</block>
   <block id="2458f462c36fbeec4b6536099135f298" category="paragraph">Corrigir e reconhecer todos os bloqueadores é obrigatório e garante um processo de atualização de software contínuo.</block>
   <block id="a710a4a4b33a19ce9678b290e8622101" category="paragraph">É apresentada a lista de clusters que necessitam de uma atualização de software.</block>
-  <block id="06cd15ffbdad395f54961af4b4da3f7d" category="list-text">Depois de decidir sobre a versão de destino do ONTAP, clique em *Prepare for update* para iniciar o processo de atualização.</block>
   <block id="921328cf9f5d7f1029ee8f2b5eb6add6" category="paragraph">É apresentada a lista de bloqueadores e avisos.</block>
   <block id="0d3e45ea704fa7abdf905562392b0203" category="list-text">Selecione o bloqueador para ver as instruções para corrigir o bloqueador.</block>
   <block id="8aa655b81ac9a54174b8b2f3c0e078b3" category="list-text">Execute manualmente as etapas fornecidas para corrigir o bloqueador.</block>
-  <block id="dd65b396655e879f1cc555905f551ba9" category="list-text">Selecione os bloqueadores que foram corrigidos e clique em *Accept Selected* para confirmar que os bloqueadores foram corrigidos.</block>
   <block id="deef003c349019061441ab60dd6ecf90" category="admonition">Você deve corrigir e reconhecer todos os bloqueadores para prosseguir com a atualização.</block>
-  <block id="f00541528c969eb6abe8cce5f5281ccc" category="list-text">Clique no separador *Avisos* para rever os avisos antes de prosseguir com a atualização do software.</block>
-  <block id="3a49822934e3057e70050398c92aa888" category="list-text">Clique no separador *reconhecer* para ver os bloqueadores que foram corrigidos.</block>
-  <block id="5143d195cc41390e0e4722e37a8b670d" category="list-text">Clique em *Continue to update* para prosseguir com o processo de atualização.</block>
   <block id="0fd40a88a795a27afa35dc3e7dbce97c" category="summary">Atualize seu sistema de armazenamento ONTAP para aproveitar os recursos novos e aprimorados.</block>
   <block id="ef54c6082f1b8fb3ea432a9b7cdce377" category="doc">Atualização completa do sistema de armazenamento ONTAP</block>
   <block id="84159d0a25239d2d4573172d023c46e7" category="list-text">Leia e aceite o contrato de licença do utilizador final.</block>
@@ -51,9 +46,7 @@
   <block id="24958f1bc0c9e80abac7daea72c06854" category="list-text">Na navegação à esquerda do BlueXP , selecione *Saúde &gt; atualizações de software.*</block>
   <block id="20b41c007263bf3cb834352319595be6" category="summary">Reveja os pré-requisitos e requisitos antes de prosseguir com a atualização do ONTAP.</block>
   <block id="7efc4f28b854970100677afdf18e3743" category="paragraph">Para usar as atualizações de software do BlueXP , você deve garantir que seu ambiente atenda a todos os requisitos.</block>
-  <block id="7fd857a6ab8e5cb6d32815d3414ad1f1" category="list-text">Uma organização BlueXP  está disponível.</block>
   <block id="6e3e90ee630b7faf0d6dad037bbd177a" category="list-text">Um ambiente de trabalho é configurado no BlueXP .</block>
-  <block id="f79a5712ad4df34137efe352ad13262f" category="list-text">Os Privileges de administrador estão disponíveis para executar a atualização de software usando o Gerenciador de sistema.</block>
   <block id="0a97d1300ce9361165541c64b6bd10b7" category="list-text">As credenciais de administrador estão disponíveis para o cluster desejado durante a atualização de software.</block>
   <block id="b34cd7f587984e9b254885f6d8640801" category="list-text">Todos os nós no cluster estão enviando dados AutoSupport.</block>
   <block id="27eb16a8f5038a8a66d0aec86d022bbd" category="list-text">Todos os nós devem ser executados no ONTAP 9.10 ou versões posteriores.</block>
@@ -154,8 +147,6 @@
   <block id="9d06990508d25d367d9158c6558eb9c8" category="list-text"><block ref="9d06990508d25d367d9158c6558eb9c8" category="inline-link-macro-rx"></block></block>
   <block id="7450cfde7058dc5e1f7909d0280fd7ae" category="inline-link-macro">Azure NetApp Files</block>
   <block id="2e0c742f4616eb27b5b7646aa790edfe" category="list-text"><block ref="2e0c742f4616eb27b5b7646aa790edfe" category="inline-link-macro-rx"></block></block>
-  <block id="b0cee72642f5457a71ddd0b49efb6d93" category="inline-link-macro">Cloud Volumes Service para Google Cloud</block>
-  <block id="cf14bff66a8b72d3675db8ffe0f02ee3" category="list-text"><block ref="cf14bff66a8b72d3675db8ffe0f02ee3" category="inline-link-macro-rx"></block></block>
   <block id="3880ae5df9fdc4d0fc4a6d00a2239530" category="paragraph">Para receber suporte técnico específico da BlueXP  e de suas soluções e serviços de storage, use as opções de suporte descritas abaixo.</block>
   <block id="edd15fbeb7b2dffa163336ecd4f3e80c" category="section-title">Use opções de suporte autônomo</block>
   <block id="5e4b821a1a82558dead1ef6961e90666" category="paragraph">Estas opções estão disponíveis gratuitamente, 24 horas por dia, 7 dias por semana:</block>
@@ -344,4 +335,20 @@
   <block id="f50a226c5a51111405309ae78236d95d" category="doc">Riscos atenuados</block>
   <block id="66fa090892a2bd81c896ab6fbf156b19" category="paragraph">Na seção de resumo das atualizações de software do BlueXP , agora você pode ver o número total de riscos que podem ser mitigados pela atualização do sistema operacional. Isso permite que os usuários avaliem as melhorias de segurança e estabilidade em sua base de instalação.</block>
   <block id="47388f68695ab5799ff2adfb33bca00d" category="section-title">02 de abril de 2025</block>
+  <block id="eb41c324559b969116f2a7d0e5a512c7" category="paragraph-title">Função BlueXP necessária:</block>
+  <block id="fd3b9b6f969e334605ecb2deacbd84cc" category="inline-link-macro">Saiba mais sobre as funções de acesso do BlueXP.</block>
+  <block id="4de48b1d25f387ca4892d8634f62973e" category="paragraph">Administrador da organização, administrador de pasta ou projeto, administrador de armazenamento ou especialista em integridade do sistema. <block ref="6677d2bbecb9c8fe39d4645334e442a8" category="inline-link-macro-rx"></block></block>
+  <block id="0fdb0ceffdc4d2d2cdb1f927a8e4bbe5" category="list-text">Selecione *Iniciar atualização* para iniciar o processo de atualização.</block>
+  <block id="33ba4cda6895a31680b2de36d86dab15" category="list-text">Depois de decidir a versão de destino do ONTAP , selecione *Preparar para atualização* para iniciar o processo de atualização.</block>
+  <block id="6a9157b81110d193ae9726acd434a73b" category="list-text">Selecione os bloqueadores que foram corrigidos e selecione *Reconhecer selecionados* para confirmar que os bloqueadores foram corrigidos.</block>
+  <block id="f1bceb312606e73e3fc3cb05ba0db012" category="list-text">Selecione a aba *Avisos* para revisar os avisos antes de prosseguir com a atualização do software.</block>
+  <block id="185674eb1bcbdcee59090d2a4854c5bd" category="list-text">Selecione a aba *Reconhecer* para visualizar os bloqueadores que foram corrigidos.</block>
+  <block id="46ab049c063b4859793fe4d01b477a97" category="list-text">Selecione *Continuar atualizando* para prosseguir com o processo de atualização.</block>
+  <block id="b6f64caf7d0bc5014c5dc5b478d3b150" category="paragraph">Administrador da organização, administrador de pasta ou projeto, administrador de armazenamento, visualizador de armazenamento ou especialista em integridade do sistema. <block ref="6677d2bbecb9c8fe39d4645334e442a8" category="inline-link-macro-rx"></block></block>
+  <block id="1da5a40083bd16c3443e7eda42875506" category="doc">Função de acesso BlueXP necessária</block>
+  <block id="53dafb5a873d00157d780f773c016fed" category="paragraph">Agora você precisa de uma das seguintes funções de acesso para instalar atualizações de software: *Administrador da organização*, *Administrador de pasta ou projeto*, *Administrador de armazenamento*, *Visualizador de armazenamento* ou *Especialista em integridade do armazenamento*. Usuários com a função Visualizador de armazenamento têm várias permissões relacionadas a atualizações de software, mas não podem instalar atualizações de software. <block ref="5f4605f8f9a6dca73fc40e564cf6fcbc" category="inline-link-macro-rx"></block></block>
+  <block id="0a7ea76c19ce14ea769fa96b38086400" category="paragraph">Você também precisa ter uma das seguintes funções de acesso: administrador da organização, administrador de pasta ou projeto ou administrador de armazenamento.</block>
+  <block id="e48502083eb8949c8f65b2ccddd5adec" category="section-title">12 de maio de 2025</block>
+  <block id="1215f8190533dfdf63d2224a6d88266f" category="inline-link-macro">Google Cloud NetApp volumes</block>
+  <block id="cb4bf32603c89d08cad17e7e7dd302f2" category="list-text"><block ref="cb4bf32603c89d08cad17e7e7dd302f2" category="inline-link-macro-rx"></block></block>
 </blocks>
