@@ -1,0 +1,9 @@
+= Função de acesso BlueXP necessária
+:allow-uri-read: 
+
+
+
+
+=== Função de acesso BlueXP necessária
+
+Agora você precisa de uma das seguintes funções de acesso para instalar atualizações de software: *Administrador da organização*, *Administrador de pasta ou projeto*, *Administrador de armazenamento*, *Visualizador de armazenamento* ou *Especialista em integridade do armazenamento*. Usuários com a função Visualizador de armazenamento têm várias permissões relacionadas a atualizações de software, mas não podem instalar atualizações de software. link:https://docs.netapp.com/us-en/bluexp/concept-iam-predefined-roles.html["Saiba mais sobre as funções de acesso do BlueXP."^]
