@@ -13,11 +13,12 @@ summary: Reveja os pré-requisitos e requisitos antes de prosseguir com a atuali
 [role="lead"]
 Você deve rever os pré-requisitos e requisitos antes de prosseguir com a atualização do ONTAP. Você pode usar as atualizações de software do BlueXP  para verificar a prontidão do seu ambiente operacional, login, acesso à rede e navegador da Web.
 
+.Função BlueXP necessária:
+Administrador da organização, administrador de pasta ou projeto, administrador de armazenamento, visualizador de armazenamento ou especialista em integridade do sistema. link:https://docs.netapp.com/us-en/bluexp-setup-admin/reference-iam-predefined-roles.html["Saiba mais sobre as funções de acesso do BlueXP."^]
+
 Para usar as atualizações de software do BlueXP , você deve garantir que seu ambiente atenda a todos os requisitos.
 
-* Uma organização BlueXP  está disponível.
 * Um ambiente de trabalho é configurado no BlueXP .
-* Os Privileges de administrador estão disponíveis para executar a atualização de software usando o Gerenciador de sistema.
 * As credenciais de administrador estão disponíveis para o cluster desejado durante a atualização de software.
 * Todos os nós no cluster estão enviando dados AutoSupport.
 * Todos os nós devem ser executados no ONTAP 9.10 ou versões posteriores.
