@@ -7,7 +7,7 @@ summary:
 = Avisos legais
 :allow-uri-read: 
 :icons: font
-:imagesdir: ../media/
+:imagesdir: ./media/
 
 
 [role="lead"]
